# alma-take-home

./: .env.example  .gitignore  NOTES.md  README.md  docker-compose.yml
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: main.py  seed.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: auth.py  leads.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: lead.py  user.py
apps/api/app/schemas/: lead.py
apps/api/app/services/: errors.py  leads.py  notifications.py
apps/api/app/services/email/: __init__.py  base.py  console.py  resend.py  smtp.py
apps/api/app/services/storage/: __init__.py  base.py  local.py
apps/api/tests/: conftest.py  test_auth.py  test_health.py  test_leads.py
apps/web/: .env.local.example  Dockerfile  README.md  middleware.ts
apps/web/app/: LeadForm.tsx  globals.css  layout.tsx  page.tsx
apps/web/app/api/auth/login/: route.ts
apps/web/app/api/auth/logout/: route.ts
apps/web/app/dashboard/: LogoutButton.tsx  ReachOutButton.tsx  actions.ts  error.tsx  page.tsx
apps/web/app/login/: layout.tsx  page.tsx
apps/web/components/: StatusBadge.tsx  Wordmark.tsx
apps/web/lib/: api.ts  types.ts
docs/: AGENT_USAGE.md  AUDIT_HANDOFF.md  DESIGN.md  RUN_LOCAL.md  prompt-logs.md
research/: NOTES.md  README.md
research/docs/: AGENT_USAGE.md  DESIGN.md  RUN_LOCAL.md  prompt-logs.md
