[project]
name = "lead-management-api"
version = "0.1.0"
description = "FastAPI service for creating, listing and updating leads"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",
    "pyjwt>=2.8",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Third-party notice from FastAPI's own testclient import; not actionable here.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated.*",
]

[tool.ruff]
line-length = 100
